# projetos_dinamicos

./: .dockerignore  .env.example  .gitignore  CNAME  GMAIL_SMS_CONFIG.txt  README.md  README_SQLITE.md  SPEC.md  api.php  app.py  auditoria.html  build.sh  capacitor.config.json  comandos-docker.html  default  docker-compose.yml  downloads.html  file_db.py  git-sync.sh  index.html  install.sh  install_amoranimal.sh  next.txt  package-lock.json  package.json  projeto.html  relatorio.html  relatorio_fluxograma.html  requirements.txt  suporte.html
api/: Dockerfile  package.json
api/src/: server.js
components/: footer.js  header.js
config/: build.sh  vite.config.js
css/: style.css
dashboard/css/: style.css
dashboard/js/: app.js
data/: licoes_aprendidas.json  project-management.json  templates.json
db/init/: 01-schema.sql  02-seed.sh
docs/: stripe-tutorial.txt
js/: app.js  data.js
login/: index.html
pages/: adocao.html  cadastro_procura_se.html  castracao.html  castracao_baixo_custo.html  castracao_mutirao.html  castracao_mutirao_form.html  castracao_pets_rua.html  castracao_sucesso.html  coleta.html  doacao.html  evento_form.html  eventos.html  parceria.html  policy.html  procura_se.html  sobre.html  termo_adocao.html  transparencia.html  voluntario.html
projeto1/: index.html
projeto1/css/: style.css
projeto2/: index.html
projeto3/: index.html
relatorio/: castracao.html  index.html
src-tauri/: Cargo.toml  tauri.conf.json
static/js/: db.js  (+38 more)
tauri/: Cargo.toml
templates/: index.html  projeto.html  relatorio.html  relatorio_fluxograma.html
(+39 files in other folders)
