[package]
name = "projetos-dinamicos"
version = "1.0.0"
description = "Gerenciador visual de projetos e atividades"
authors = ["you"]
license = "MIT"
repository = ""
default-run = "projetos-dinamicos"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = ["shell-open", "shell-spawn"] }
log = "0.4"
env_logger = "0.10"
portable-pty = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
